project2/tests/reject/0-do-while-bad.cc
int main(){
    int x;
    do{
        x = 3;
    }while(x);
}